--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-svg": "13.9.0",
     "styled-components": "5.0.0",
     "typescript": "^5.1.3"
   },
@@ -24,7 +25,8 @@
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
-    "eslint-config-universe": "^11.3.0"
+    "eslint-config-universe": "^11.3.0",
+    "react-native-svg-transformer": "^1.1.0"
   },
   "eslintConfig": {
     "extends": "universe/native"
