--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-svg": "13.9.0",
