--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "npx expo start",
+    "start:dev": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/flash-list": "1.4.3",
     "@types/react": "~18.2.14",
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
@@ -17,6 +19,9 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
     "styled-components": "5.0.0",
     "typescript": "^5.1.3"
